--- a/travel_recommendation.html
+++ b/travel_recommendation.html
@@ -6,72 +6,113 @@
     <title>Travel Recommendation</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
     <link rel="stylesheet" href="travel_recommendation.css">
-</head>
+    
 <body>
-    <!----NAVIGATION BAR-->
+
+    <!-- Navigation Bar -->
     <nav>
         <div class="logo">
-             <i class="fa-solid fa-plane"></i>
-             TravelBloom
+            <i class="fa-solid fa-plane"></i>
+            TravelBloom
         </div>
-
         <div class="menu">
-            <a href="#home" id="home" >Home</a>
-            <a href="#aboutus" id="about">About Us</a>
-            <a href="#contactus" id="contact">Contact Us</a>
+            <a href="#home" class="nav-link">Home</a>
+            <a href="#aboutus" class="nav-link">About Us</a>
+            <a href="#contactus" class="nav-link">Contact Us</a>
         </div>
-
         <div class="search">
-            <input type="text" name="search" id="search" placeholder="Enter the Destination">
-            <i class="fa-solid fa-search"></i>
-            <button id="" class="btn">Search</button>
-            <button id="" class="btn">Clear</button>
+            <input type="text" id="search-input" placeholder="Enter destination...">
+            <button id="search-btn" class="btn">Search</button>
+            <button id="clear-btn" class="btn">Clear</button>
         </div>
     </nav>
 
-    <!----HOME SECTION-->
-    <section id="home">
-        <div class="home-container">
-            <div class="background-img">
-                <img src="images/bgimg2.jpg" alt="travel" class="bgimg">
-                <div class="text-overlay">
-                    <h1>EXPLORE</h1>
-                    <h1>DREAM</h1>
-                    <h1>DESTINATION</h1>
-                    <p>Find the best travel destination for you</p>
-                    <button id="book" class="btn">Book Now</button>
-                </div>
-                <div class="Sidebar">
-                    <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
-                </div>  
-            </div>  
-        </div>    
-    </section>
-    
-    <!----ABOUT US SECTION-->
-    <section id="aboutus">
-        <div class="aboutus-container">
-            <div class="background-img">
-                <img src="images/bgimg1.jpg" alt="travel" class="bgimg">
-                <div class="text-overlay">
-                    <h1 class="ss">ABOUT US</h1>  
-                    <article class="ps">
-                        <p class="ps">At TravelBloom, we believe that travel is more than just visiting new places; it's about creating unforgettable experiences, exploring hidden gems, and discovering the world from a different perspective. Whether you're seeking a relaxing beach getaway, an adventurous mountain retreat</p>
-                    </article>
-                    <button id="book" class="btn">Book Now</button>
-                </div>
-                <div class="Sidebar">
-                    <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
-                    <a href="#" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
-                </div>  
-            </div>  
-        </div>    
+    <!-- Main Content Sections -->
+    <section id="home" class="active">
+        <div class="hero">
+            <div class="hero-content">
+                <h1>EXPLORE DREAM DESTINATIONS</h1>
+                <p>Find the best travel destinations for you</p>
+            </div>
+        </div>
+        <div id="results"></div>
     </section>
 
+
+<!-- About Us Section -->
+<section id="aboutus">
+    <div class="background-img">
+        <img src="images/bgimg1.jpg" alt="travel" class="bgimg">
+        <div class="text-overlay">
+            <h1 class="ss">ABOUT US</h1>
+            <p class="ps">
+                At TravelBloom, we believe that travel is more than just visiting new places; it's about creating unforgettable experiences, exploring hidden gems, and discovering the world from a different perspective. Whether you're seeking a relaxing beach getaway, an adventurous mountain retreat, or something in between, we offer personalized travel recommendations for every type of traveler.
+            </p>
+        </div>
+        <div class="Sidebar">
+            <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+            <a href="#" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+        </div>
+    </div>
+</section>
+
+<!-- Our Team Section -->
+<section id="ourteam">
+    <div class="our-team">
+        <h2>Our Team</h2>
+        <div class="team-container">
+            <div class="team-member">
+                <h3>John Doe</h3>
+                <p>John is responsible for...</p>
+                <button class="role-btn">CEO</button>
+            </div>
+            <div class="team-member">
+                <h3>Celina Thomas</h3>
+                <p>Celina is responsible for...</p>
+                <button class="role-btn">Team Lead</button>
+            </div>
+        </div>
+    </div>
+</section>
+
+<!-- Contact Us Section -->
+<section id="contactus">
+    <div class="background-img">
+        <div class="text-overlay">
+            <h1>Contact Us</h1>
+            <p>Feel free to reach out for any inquiries or questions!</p>
+        </div>
+        <div class="contact-form">
+            <form action="#" method="POST">
+                <div class="form-group">
+                    <label for="name">Full Name:</label>
+                    <input type="text" id="name" name="name" required>
+                </div>
+                <div class="form-group">
+                    <label for="email">Email Address:</label>
+                    <input type="email" id="email" name="email" required>
+                </div>
+                <div class="form-group">
+                    <label for="message">Message:</label>
+                    <textarea id="message" name="message" rows="4" required></textarea>
+                </div>
+                <button type="submit">Submit</button>
+            </form>
+        </div>
+    </div>
+</section>
+
+<!-- Footer with Social Media Links -->
+<section class="social-media">
+    <h3>Follow Us</h3>
+    <a href="#" class="social-icon"><i class="fa-brands fa-facebook-f"></i></a>
+    <a href="#" class="social-icon"><i class="fa-brands fa-twitter"></i></a>
+    <a href="#" class="social-icon"><i class="fa-brands fa-instagram"></i></a>
+    <a href="#" class="social-icon"><i class="fa-brands fa-whatsapp"></i></a>
+</section>
+
+<script src="travel_recommendation.js"></script>
 </body>
 </html>
